--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CarsSavedActivity"></activity>
+        <activity android:name=".CarsSavedActivity" />
+        <activity android:name=".CarWebViewActivity"></activity>
     </application>
 
 </manifest>
